knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type__c/pqcrush__White_Space_Amount_Type__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Amount Type</label>
    <nameField>
        <label>Cross-Sell Amount Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross-Sell Amount Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>