knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type__c/fields/pqcrush__Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>32</length>
    <type>Text</type>
</CustomField>