knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type__c/fields/pqcrush__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Display_Type__c</fullName>
    <description>The way the data is displayed for this type</description>
    <label>Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pqcrush__Field_Types</valueSetName>
    </valueSet>
</CustomField>