knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type__c/fields/pqcrush__IsActive__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether this record shows up in white space reports</description>
    <inlineHelpText>Active records will be displayed in associated white space reports. Inactive records will be hidden from associated white space reports.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>