knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space_Amount_Type__c/validationRules/pqcrush__ProperColorFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>pqcrush__ProperColorFormat</fullName>
    <active>true</active>
    <description>Validation to make sure color is in #RGB or #RRGGBB</description>
    <errorConditionFormula>NOT(REGEX( pqcrush__Color_RGB__c , &apos;^#([a-fA-F0-9]{6}|[a-fA-F0-9]{3})$&apos;))</errorConditionFormula>
    <errorDisplayField>pqcrush__Color_RGB__c</errorDisplayField>
    <errorMessage>You must enter a valid 3 or 6 digit hexadecimal color code (ex. #f82 or #ff11bb)</errorMessage>
</ValidationRule>